--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/" />
     <script src="/pc.js" type="text/javascript"></script>
+
+    <style>
+        html,
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 
 <body>
